# PulseDE-V2

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  README.md  pyproject.toml  run_lite.py
.github/workflows/: ci.yml
config/: settings.py
infra/: docker-compose.yml  prometheus.yml
infra/db/: init.sql
src/dashboard/: streamlit_app.py  streamlit_lite.py
src/ingestion/: kafka_producer.py  news_fetcher.py  schema.py
src/ml/: ensemble.py  evaluator.py  feature_engineering.py
src/monitoring/: __init__.py  drift_detector.py
src/orchestration/: __init__.py  pipeline.py
src/processing/: __init__.py  kafka_consumer.py
src/serving/: __init__.py  api.py
src/storage/: __init__.py  redis_cache.py  timescale_writer.py
tests/unit/: test_ml.py
